--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <html lang="en">
   <head>
+    <style>
+      h1 {text-align: center;}
+      p {text-align: center;}
+      div {text-align: center;}
+    </style>
+    <h1>PROJECT NEMESIS</h1>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    
-    <!-- Css style sheet -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- Data file -->
     <script src="src/data.js"></script>
-    <!-- JavaScript file -->
-    <!-- defer - this file will load after the DOM loads -->
     <script defer src="src/index.js"></script>
 
     <title>NEMISIS</title>
